<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.company.sun.intelligentfan.LoginActivity">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/login_title"
        android:textColor="#DC143C"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:textStyle="bold"
            android:text="@string/username_title"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFF00"
            android:maxLength="11"
            android:hint="@string/username_hint"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:textStyle="bold"
            android:text="@string/password_title"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFF00"
            android:maxLength="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/submit"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/reset"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#0000FF"
            android:text="@string/rememberMe"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>
