<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/resetpwd"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/setting_text"
            android:gravity="center"
            android:text="@string/resetpwd_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/setting_text"
            android:gravity="center"
            android:text="@string/help_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/setting_text"
            android:gravity="center"
            android:text="@string/exit_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>