<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@mipmap/cuifan1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/winds_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winds_title_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/showtext_bg2"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/wind_speed_text" />

        <TextView
            android:id="@+id/wind_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/wind_unit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/addwinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_weight="1"
            app:srcCompat="@drawable/tab_addwinds" />

        <ImageButton
            android:id="@+id/decwinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_weight="1"
            app:srcCompat="@drawable/tab_decwinds"/>
    </LinearLayout>


</LinearLayout>
