<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_weight="0.56"
        tools:ignore="InefficientWeight" />

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/text_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
       >

        <EditText
            android:id="@+id/am_time"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/am_hint"
            android:gravity="center"
            android:inputType="time"
            android:layout_weight="0.34"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/am_ok"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ok"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/am_close"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/am_close"
            android:layout_marginRight="5dp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/show_am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/text_yellow"
            android:text="" />
    </LinearLayout>

</LinearLayout>