<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="340dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setsec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setsec_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/secdate"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="0"
                android:textSize="16sp"
                tools:ignore="HardcodedText,LabelFor" />

            <TextView
                android:id="@+id/show_timers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/timer_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/ok"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/timer_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/am_close"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>